--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
 :root {
   --background: #ffffff;
   --foreground: #ffffff;
+  height: auto;
 }
 
 @theme inline {
@@ -27,6 +28,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  height: auto;
 }
 
 
